Fix constructor referencing for static methods

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "typescript": "^5.9.2"
   },
   "scripts": {
-    "build": "esbuild js/main.ts --bundle --minify --sourcemap --outfile=build/index.js"
+    "build": "esbuild js/main.ts --bundle --minify --sourcemap --outfile=build/index.js",
+    "watch": "nodemon --exec \"yarn build\" -e js,ts --ignore build/"
   },
   "author": "",
   "license": "ISC"
